--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "dotenv>=0.9.9",
     "openai>=1.98.0",
+    "python-dotenv>=1.1.1",
     "requests>=2.32.4",
 ]
