--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.9"
 dependencies = [
     "dotenv>=0.9.9",
     "openai>=1.98.0",
+    "pypdf>=5.9.0",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
 ]
